[package]
name = "phys64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = 3

[dependencies]
bevy = "0.12.0"
bevy-inspector-egui = "0.21.0"
bevy_rapier3d = "0.23.0"
leafwing-input-manager = "0.11.2"

